--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>edc-extensions</module>
         <module>edc-controlplane</module>
         <module>edc-dataplane</module>
+        <module>edc-tests</module>
     </modules>
 
     <inceptionYear>2022</inceptionYear>
@@ -55,7 +56,9 @@
         <org.apache.maven.plugins.compiler.version>3.10.1</org.apache.maven.plugins.compiler.version>
         <org.apache.maven.plugins.resources.version>3.2.0</org.apache.maven.plugins.resources.version>
         <org.projectlombok.lombok.maven.plugin.version>1.18.20.0</org.projectlombok.lombok.maven.plugin.version>
+        <org.jacoco.maven.plugin.version>0.8.8</org.jacoco.maven.plugin.version>
         <org.jasig.maven.notice.plugin.version>1.1.0</org.jasig.maven.notice.plugin.version>
+        <org.sonarsource.scanner.maven.plugin.version>3.9.1.2184</org.sonarsource.scanner.maven.plugin.version>
 
         <!-- dependency version -->
         <org.eclipse.dataspaceconnector.version>0.0.1-SNAPSHOT</org.eclipse.dataspaceconnector.version>
@@ -181,6 +184,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${org.apache.maven.plugins.surefire.version}</version>
+                    <configuration>
+                        <parallel>all</parallel>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -251,6 +257,16 @@
                         </execution>
                     </executions>
                 </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${org.jacoco.maven.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>${org.sonarsource.scanner.maven.plugin.version}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
@@ -278,6 +294,35 @@
             <dependency>
                 <groupId>net.catenax.edc.extensions</groupId>
                 <artifactId>hashicorp-vault</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <!-- CX edc-controlplane -->
+            <dependency>
+                <groupId>net.catenax.edc</groupId>
+                <artifactId>edc-controlplane-memory</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.catenax.edc</groupId>
+                <artifactId>edc-controlplane-postgresql</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.catenax.edc</groupId>
+                <artifactId>edc-controlplane-postgresql-hashicorp-vault</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <!-- CX edc-dataplane -->
+            <dependency>
+                <groupId>net.catenax.edc</groupId>
+                <artifactId>edc-dataplane-azure-vault</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.catenax.edc</groupId>
+                <artifactId>edc-dataplane-hashicorp-vault</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -999,7 +1044,31 @@
         </dependencies>
     </dependencyManagement>
 
+
     <profiles>
+        <profile>
+            <id>failsafe</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <parallel>all</parallel>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
         <profile>
             <id>generate-notice</id>
             <build>
@@ -1033,6 +1102,52 @@
                                 <param>${project.basedir}/misc/license-mappings.xml</param>
                             </licenseMapping>
                         </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>coverage</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>report</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>jacoco-check</id>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                                <configuration>
+                                    <rules>
+                                        <rule>
+                                            <element>PACKAGE</element>
+                                            <limits>
+                                                <limit>
+                                                    <counter>LINE</counter>
+                                                    <value>COVEREDRATIO</value>
+                                                    <minimum>0.6</minimum>
+                                                </limit>
+                                            </limits>
+                                        </rule>
+                                    </rules>
+                                </configuration>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
